--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,7 @@ jobs:
         flake8 s3encrypt --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        python -m pytest -v --cov=./ --cov-report=xml
+        python -m pytest -v --cov=./s3encrypt/ --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
 
