--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ black = "==19.10b0" # pre-release dependency so it must be exact match
 flake8 = ">=3.7.9"
 tox = ">=3.14.3"
 coverage = ">=5.0.3"
+pytest-cov = "*"
 mypy = ">=0.761"
 bump2version = ">=1.0.0"
 mock = ">=4.0.1"
