--- a/setup.cfg
+++ b/setup.cfg
@@ -43,3 +43,15 @@ ignore_missing_imports = True
 
 [mypy-watchdog.observers]
 ignore_missing_imports = True
+
+[mypy-aws_encryption_sdk]
+ignore_missing_imports = True
+
+[mypy-aws_encryption_sdk.internal.crypto]
+ignore_missing_imports = True
+
+[mypy-aws_encryption_sdk.key_providers.raw]
+ignore_missing_imports = True
+
+[mypy-aws_encryption_sdk.identifiers]
+ignore_missing_imports = True
