--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ sphinx = ">=2.4.1"
 black = "==19.10b0" # pre-release dependency so it must be exact match
 flake8 = ">=3.7.9"
 tox = ">=3.14.3"
+tox-pyenv = ">=1.1.0"
 coverage = ">=5.0.3"
 pytest-cov = "*"
 mypy = ">=0.761"
