--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ legacy_tox_ini = """
 [tox]
 # envlist = py37,py38
 # py37 not working with asyncio
-envlist = py38
+envlist = py38,py37
 
 
 [testenv]
