--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ line-profiler = "*"
 
 [packages]
 argparse = "*"
+cryptography = ">=3.2"
 boto3 = ">=1.12.8"
 aws-encryption-sdk = "==1.4.1"
 watchdog = ">=0.10.3"
