--- a/Pipfile
+++ b/Pipfile
@@ -31,3 +31,5 @@ watchdog = ">=0.10.3"
 typing-extensions = "*"
 # pipenv install typing_extensions git+https://github.com/Tinche/cattrs.git@v1.0.0#egg=cattrs
 cattrs = {git = "https://github.com/Tinche/cattrs.git",ref = "v1.0.0"}
+boto3-stubs = "*"
+cryptography = ">=3.3.2"
