--- a/Pipfile
+++ b/Pipfile
@@ -24,12 +24,12 @@ line-profiler = "*"
 
 [packages]
 argparse = "*"
-cryptography = ">=3.2"
 boto3 = ">=1.12.8"
-aws-encryption-sdk = "==2.0.0"
+aws-encryption-sdk = ">=2.2.0"
 watchdog = ">=0.10.3"
 typing-extensions = "*"
 # pipenv install typing_extensions git+https://github.com/Tinche/cattrs.git@v1.0.0#egg=cattrs
 cattrs = {git = "https://github.com/Tinche/cattrs.git",ref = "v1.0.0"}
 boto3-stubs = "*"
 cryptography = ">=3.3.2"
+urllib3 = ">=1.26.5"
