--- a/requirements.txt
+++ b/requirements.txt
@@ -7,19 +7,20 @@
 
 -i https://pypi.org/simple
 argparse==1.4.0
-attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-aws-encryption-sdk==2.0.0
-boto3==1.16.47
-botocore==1.19.47
-cffi==1.14.4
-cryptography==3.3.1
+attrs==21.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+aws-encryption-sdk==2.2.0
+boto3-stubs==1.17.89
+boto3==1.17.89
+botocore==1.20.89; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+cffi==1.14.5
+cryptography==3.4.7
 git+https://github.com/Tinche/cattrs.git@574c412a7da1618f52179ddbf682b1b7fdf95dd0#egg=cattrs
 jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-s3transfer==0.3.3
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-typing-extensions==3.7.4.3
-urllib3==1.26.2; python_version != '3.4'
-watchdog==1.0.2
+s3transfer==0.4.2
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+typing-extensions==3.10.0.0
+urllib3==1.26.5
+watchdog==2.1.2
 wrapt==1.12.1
